# metaView

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DENSITY_PASS_CHANGES.md  DESIGN_SYSTEM_CHANGES.md  LICENSE  MANIFEST.in  README.md  RELEASE_CANDIDATE_FIXES.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SPRINT3_INDEX_NOTES.md  SPRINT5_LIBRARY_MEMBERSHIP_NOTES.md  SPRINT6_WORKFLOW_NOTES.md  TODAY_CHANGES.md  UI_POLISH_CHANGES.md  USABILITY_PASS_CHANGES.md  V0.3.0_CHANGES.md  main.py  obs.txt  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
metaView/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
metaView/scripts/: build.py
metaView/tests/: test_prompt_library_models.py  test_source.py
src/metaview/: __init__.py  __main__.py  application.py  collections.py  comparison.py  constants.py  dialogs.py  library_folder_ui.py  library_folders.py  main.py  main_window.py  metadata.py  metadata_normalization.py  preview.py  (+9 more)
tests/: test_collections.py  test_comparison_resolution_and_drag.py  test_experiment_analysis.py  test_experiment_models.py  test_experiment_repository.py  test_experiment_service.py  test_image_index.py  test_library_folders.py  test_library_membership_source.py  test_metadata_comparison.py  test_metadata_facade.py  test_metadata_worker_signal_types.py  test_prompt_library_repository.py  test_prompt_library_ui.py  test_smart_collection_candidates.py  test_smart_collection_tags.py  test_smart_collections.py  test_source.py  test_tags.py  test_workflow_polish.py
(+23 files in other folders)
