[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaview-genai"
version = "0.3.0"
description = "A desktop image, metadata, prompt, and experiment manager for generative AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Martin Hammond" }]
dependencies = [
    "PySide6>=6.7,<7",
    "Pillow>=10.0,<12",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
metaview = "metaview.main:main"

[project.gui-scripts]
metaview-gui = "metaview.main:main"

[project.urls]
Homepage = "https://github.com/mhammond104/metaView"
Issues = "https://github.com/mhammond104/metaView/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metaview = ["assets/*.png", "assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
